--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
 			<scope>runtime</scope>
+			<version>9.4.1.jre16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
