--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8085
 
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=BOOK_AUTHOR_MANAGEMENT
+spring.datasource.username=sa
+spring.datasource.password=123456
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto = update
